--- a/module_camera/build.gradle
+++ b/module_camera/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'com.github.dcendents.android-maven'
-group = 'com.github.ailiwean'
+group = 'com.github.panruifeng1990'
 
 android {
     compileSdkVersion 29
