--- a/module_grayscale/build.gradle
+++ b/module_grayscale/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-group = 'com.github.ailiwean'
+group = 'com.github.panruifeng1990'
 
 android {
     compileSdkVersion 29
