--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,5 +51,6 @@ dependencies {
 
 //    implementation 'com.github.ailiwean:NBZxing-Scale:0.0.5'
 //    implementation 'com.github.ailiwean:NBZxing:0.1.1'
+//    implementation 'com.github.panruifeng1990:NBZxing:0.2.2'
 
 }
