--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,12 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 
 
+# ??? Maven??
+# ????????? https://devcloud.cn-north-4.huaweicloud.com/cloudartifact/repository
+MAVEN_READONLY_USER=cn-north-4_0d21c4e81880103a0fe7c0099bc78160_0d21c4e911000f931ff8c0090919e2d1
+MAVEN_READONLY_PASSWORD=]Bi78z[O4G
+MAVEN_GROUPID=com.wiwork.android
+MAVEN_RELEASE_URL=https://devrepo.devcloud.cn-north-4.huaweicloud.com/artgalaxy/cn-north-4_0d21c4e81880103a0fe7c0099bc78160_maven_1_4/
+MAVEN_SNAPSHOT_URL=https://devrepo.devcloud.cn-north-4.huaweicloud.com/artgalaxy/cn-north-4_0d21c4e81880103a0fe7c0099bc78160_maven_2_4/
+
+
